# SafeTrace

./: .gitignore  docker-compose.yml  docker.md
api-server/: Dockerfile  index.js
enclave/: Dockerfile  docker-compose.yml  remove_dir_all-patched-lib.rs
enclave/safetrace/app/: Cargo.toml  README.md
enclave/safetrace/app/src/: main.rs
enclave/safetrace/app/src/attestation/: README.md  service.rs
enclave/safetrace/app/src/esgx/: equote.rs
enclave/safetrace/app/src/networking/: ipc_listener.rs  messages.rs
enclave/safetrace/enclave/src/: auto_ffi.rs
enigma-core/enigma-tools-u/: Cargo.toml
enigma-core/enigma-tools-u/src/attestation_service/: constants.rs  service.rs
enigma-core/enigma-tools-u/src/common_u/: logging.rs
