[package]
name = "safetrace-app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
enigma-types = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop", features = ["std"] }
enigma-tools-u = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop" }
#enigma-tools-u = { path = "../../../enigma-core/enigma-tools-u" }
enigma-tools-m = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop" }
enigma-crypto = { git = "https://github.com/enigmampc/enigma-core.git", branch="develop" }

futures = { version = "0.1.25", default-features = false }
tokio-zmq = "0.9.0"
zmq = "0.9.0"
failure = "0.1.3"
serde = { version = "1.0", default-features = false, features=["serde_derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "0.14.0"
rustc-hex = "1.0.0"
lazy_static = "1.3.0"
log = "0.4.6"

# attestation
base64 = "0.10.0"
reqwest = "0.9.5"
openssl = "0.10"
openssl-sys = "0.9"
# Needed for processing Remote Attestation response from IAS (Intel Attestation Service)
percent-encoding = "2.1.0"

#log4rs = {version = "0.9.0", features = ["rolling_file_appender"] }
log-derive = "0.3"

# not needed once rlp related things are removed
rlp = "0.4.3"
